// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttributeSimpleLinkRepo filterValueQueryPart Should return query to retrieve value to filter on 1`] = `
{
  "_source": [Function],
  "bindVars": {
    "value0": {},
    "value1": "label",
  },
  "query": "FLATTEN( FOR l IN @value0
                    FILTER TO_STRING(r.@value1) == l._key 
                    LET rlinkVal = ()
                    RETURN rlinkVal
                 )",
}
`;

exports[`AttributeSimpleLinkRepo filterValueQueryPart Should return query to retrieve value to filter on for "count" filter 1`] = `
{
  "_source": [Function],
  "bindVars": {
    "value0": "linked_from",
  },
  "query": "COUNT(r.@value0) ? 1 : 0",
}
`;

exports[`AttributeSimpleLinkRepo filterValueQueryPart Should return query to retrieve value to filter on for reverse link 1`] = `
{
  "_source": [Function],
  "bindVars": {
    "value0": {},
    "value1": "linked_from",
  },
  "query": "FLATTEN( FOR l IN @value0
                    FILTER TO_STRING(r.@value1) == l._key 
                    LET rlinkVal = (<VALUE QUERY PART>)
                    RETURN rlinkVal
                 )",
}
`;

exports[`AttributeSimpleLinkRepo getReverseValues Should return values for advanced reverse link attribute into simple link 1`] = `
{
  "_source": [Function],
  "bindVars": {
    "@value0": "test_lib",
    "@value2": "test_linked_lib",
    "value1": "123456",
    "value3": "test_simple_link_attr",
  },
  "query": "
                    FOR r IN @@value0
                        FILTER r._key == @value1
                        FOR l IN @@value2
                            FILTER r.@value3 == l._key
                            RETURN l
                ",
}
`;

exports[`AttributeSimpleLinkRepo getReverseValues Should return values for advanced reverse link attribute into simple link 2`] = `undefined`;

exports[`AttributeSimpleLinkRepo getValues Should return values for simple link attribute 1`] = `
{
  "_source": [Function],
  "bindVars": {
    "@value0": "test_lib",
    "@value2": "test_linked_lib",
    "value1": "123456",
    "value3": "test_simple_link_attr",
  },
  "query": "
                    FOR r IN @@value0
                        FILTER r._key == @value1
                        FOR l IN @@value2
                            FILTER r.@value3 == l._key
                            RETURN l
                ",
}
`;

exports[`AttributeSimpleLinkRepo getValues Should return values for simple link attribute 2`] = `undefined`;

exports[`AttributeSimpleLinkRepo sortQueryPart Should return simple link sort 1`] = `
{
  "_source": [Function],
  "bindVars": {
    "value0": {},
    "value1": "label",
    "value2": "linked",
    "value3": "ASC",
  },
  "query": "SORT 
                FIRST(FOR l IN @value0
                    FILTER TO_STRING(r.@value1) == l._key
                RETURN l.@value2)
             @value3",
}
`;
